<resources>
    <string name="app_name">Tottus</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="get_into">Ingresar</string>
    <string name="register_question">¿No tienes una cuenta?</string>
    <string name="register_here">Ingresa Aqui</string>
    <string name="name">Nombres</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="register">Registrar</string>
    <string name="terms_and_conditions">Acepto los terminos y condiciones</string>
    <string name="lastName">Apellidos</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_team">Grupos</string>
    <string name="team_name">Nombre de Grupo</string>
    <string name="team_sentence">Frase</string>
    <string name="add">Agregar</string>
</resources>