<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="40dp"
    android:paddingBottom="40dp"
    android:layout_width="360dp"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/endGuideLine"
        app:layout_constraintStart_toStartOf="@+id/startGuideLine"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/teamNameText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/team_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sentenceInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/endGuideLine"
        app:layout_constraintStart_toStartOf="@+id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sentenceText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/team_sentence" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addTeamButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/add"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/endGuideLine"
        app:layout_constraintStart_toStartOf="@+id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/sentenceInputLayout" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>